# autonomous_car

./: .gitignore  FixAutoCar.sh  README.md  calibrate.ipynb  fix_i2c.sh  requirements.txt  test.txt  text.txt
App/AutoCarSocketIO/: Dockerfile  README.md  common.py  docker-compose.yml  redis_db.py  server.py
App/clientstream/: .env  requirements.txt  runstream.sh
App/guiautocar/: .env  AutoCar.py  AutoCar.ui  Draw.py  MarkerEdit.py  index.html  map.py  requirements.txt
DQN/: .env  AI.py  DQN.py  Train_DQN.ipynb  controller.py  env.py  model.py  runstream.sh
auto_car/: .env  package.xml  requirements.txt  setup.py
auto_car/.ipynb_checkpoints/: calibrate-checkpoint.ipynb
auto_car/auto_car/: .env  aware_core.py  controller_final.py  controller_node.py  gps_node.py  led_signal.py  per_core.py  planning_final.py  planning_node.py  ps4.py  socketio_final.py  socketio_node.py
auto_car/data/: accurate_data.csv
auto_car/launch/: auto_car.launch.py  auto_car_new.launch.py  driver.launch.py  start.sh
auto_car/scripts/: start.sh
auto_car/src/auto_car/: .env  arduino.py  controller_new_node.py  controller_node.py  controller_node_new.py  controller_node_test.py  gps_new_node.py  gps_node.py  gps_node_new.py  gps_node_test.py  planning_new_node.py  planning_new_node_dqn.py  planning_node.py  planning_node_test.py  socketio_new_node.py  socketio_node.py  socketio_node_dqn.py  test.py  ultrasonic_controller.py  ultrasonic_planning.py
auto_car/src/auto_car/lib/: aa.py  cal_coordinate.py  led_signal.py  model.py  per_core.py  per_core_test.py  ultrasonic_per_core.py
collect_data/auto_car/: package.xml
collect_data/auto_car/install/auto_car/share/auto_car/: package.ps1
collect_data/auto_car/urdf/: auto_car.urdf
collect_image/: collect_data.py  collect_data_v2.py  controller.py  ps4.py  ps4controller.py
controller/: package.xml  setup.py
controller_final/: package.xml  setup.py
controller_v1/: package.xml  setup.cfg  setup.py
imitation_learning/: dataset.ipynb  dataset.py  dataset_straight.py  gps_new_node.py  per.py
install/: local_setup.sh  setup.sh
log/: latest_build
tools/: dataset.ipynb  ps4.py
(+167 files in other folders)
