<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_car</name>
  <version>0.0.0</version>
  <description>autonomous car</description>
  <maintainer email="nkcong206@gmail.com">nkcong206</maintainer>
  <license>License</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>pop</depend>
  <depend>socketio</depend>
  <depend>serial</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
