<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_car</name>
  <version>0.0.0</version>
  <description>AIoT AutoCar nodes and launch files and other resources</description>
  <maintainer email="nkcong206@todo.todo">nkcong206</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>pyPS4Controller</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>
  <depend>sensor_msgs</depend>
  <depend>threading</depend>
  
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
